feat: add interactive 3D card with flip and tilt using Three.js and shaders.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
 
     <!-- Script -->
     <script src="./script.js" defer></script>
+
+    <!-- Three.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
 </head>
 
 <body>
     <main>
+        <!-- DBSCG 3D Viewer -->
+        <canvas id="webgl-canvas"></canvas>
+
         <!-- Toggle mode button -->
         <button id="toggle-mode-btn">
             <i class="bi bi-moon-stars-fill"></i>
@@ -28,8 +35,8 @@
         <a id="portfolio-link" href="https://www.fchavonet.dev" target="_blank">www.fchavonet.dev</a>
 
         <!-- GitHub link -->
-        <a id="github-link" href="https://github.com/fchavonet" target="_blank">
-            <img src="https://img.shields.io/github/stars/fchavonet/fchavonet?style=social&label=GitHub%20Stars" alt="GitHub Stars">
+        <a id="github-link" href="https://github.com/fchavonet/web-dbscg_3d_viewer" target="_blank">
+            <img src="https://img.shields.io/github/stars/fchavonet/web-dbscg_3d_viewer?style=social&label=GitHub%20Stars" alt="GitHub Stars">
         </a>
 
         <!-- Responsive Warning -->
